# rust_ord_by_key

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
tests/: test_ord_eq_by_key_selector.rs
